# fastapi_postgres_demo

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 9703932ba7b7_moving_is_active_to_user_table.py  e8809c69f32e_.py
api/: courses.py  users.py
api/utils/: users.py
db/: database.py
db/models/: course.py  user.py
