[tool.poetry]
name = "fastapi-postgres"
version = "0.1.0"
description = ""
authors = ["gesrygsy <gesrygsy@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.24"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
